# cmake-ctest-pytest

./: CMakeLists.txt  readme.md
.github/workflows/: Windows.yml
python/: CMakeLists.txt  setup.py.in
tests/: CMakeLists.txt
